--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .DS_Store
 *.DS_Store
+.ipynb_checkpoints/spark-the-definitive-guide40www.bigdatabugs.com_-checkpoint.pdf
+spark-the-definitive-guide40www.bigdatabugs.com_.pdf
+.ipynb_checkpoints/ch3-checkpoint.ipynb
